resources-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resources-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: resources-demo

  template:
    metadata:
      labels:
        app: resources-demo

    spec:
      containers:
        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
