secret-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: secret-demo

spec:
  containers:
    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - "echo Username: $DB_USERNAME; echo Password: $DB_PASSWORD; sleep 3600"
