startup-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startup-demo

spec:
  replicas: 1

  selector:
    matchLabels:
      app: startup-demo

  template:
    metadata:
      labels:
        app: startup-demo

    spec:
      containers:
        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80

          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
