resources-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources-service

spec:
  selector:
    app: resources-demo

  ports:
    - port: 80
      targetPort: 80
